# aiops-multi-agent

./: .gitignore  LICENSE  README.md  ROADMAP.md  graph.py  main.py  main_inspect.py  pyproject.toml  result.txt
agents/: aggregator.py  approval_exec_worker.py  approval_gate.py  classifier.py  executor.py  inspector.py  investigator.py  metrics_inspector.py  notifier.py  remediator.py  state.py  triage.py  validator.py  verifier_worker.py
config/: policies.yaml.example
docs/superpowers/specs/: 2026-06-29-aiops-p0-improvements-design.md  2026-06-30-approval-exec-design.md  2026-06-30-investigator-autonomous-exec-design.md
examples/: hello.py  hello_llm.py
scripts/: aiops_review.py  aiops_verify_status.py
tests/: test_approval_target_check.py  test_approval_target_v22.py  test_e2e.py  test_fault_memory.py  test_function_calling.py  test_graph_routing.py  test_inspector.py  test_inspector_severity.py  test_k8s_tools.py  test_llm_factory.py  test_logs.py  test_policy.py  test_prom.py  test_remediation_actions.py  test_remediator_post_process.py  test_remediator_r3.py  test_scheduler_grouping.py  test_triage.py  test_v22_actions.py  test_validator_futility.py
tools/: approval_exec.py  approval_store.py  change_tracker.py  fault_memory.py  im_notify.py  k8s_tools.py  langfuse_setup.py  llm_factory.py  metrics_rules.py  mock_tools.py  policy.py  remediation_actions.py  safety_guards.py  ssh_tools.py  tool_schemas.py  verifier_store.py
