  [project]
  name = "aiops-multi-agent"
  version = "0.1.0"
  description = "AIOps Multi-Agent based on LangGraph + vLLM"
  readme = "README.md"
  requires-python = ">=3.10"
  dependencies = [
      "langgraph>=0.2.0",
      "langchain>=0.3.0",
      "langchain-openai>=0.2.0",
      "fastapi>=0.115.0",
      "uvicorn>=0.32.0",
      "pydantic>=2.9.0",
      "httpx>=0.27.0",
      "kubernetes>=36.0.2",
]
